...
        app:layout_constraintStart_toStartOf="@id/tvDrinkName"
        app:layout_constraintTop_toBottomOf="@id/tvDrinkName"

        tools:text="4.8%, 0.5L" />

    <ImageView
        android:id="@+id/ivDelete"
        android:layout_width="22dp"
        android:layout_height="22dp"
        android:layout_margin="@dimen/margin_small"
        android:src="@drawable/ic_delete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
...
